# rui5t

./: .gitignore  Cargo.toml  netlify.toml  package-lock.json  package.json
crates/rui5t/: Cargo.toml
crates/rui5t/src/: badge.rs  icon.rs  lib.rs  side_navigation.rs
crates/showcase/: Cargo.toml  README.md  package-lock.json  package.json
crates/showcase/js/: index.js
crates/showcase/src/: lib.rs
crates/showcase/static/: index.html
js/: index.js
src/: lib.rs
static/: index.html
tests/: app.rs
