[package]
name = "rui5t"
description = "Rust binding for UI5"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
categories = ["wasm"]
edition = "2018"

[dependencies]
mox = { git = "https://github.com/simon-bourne/moxie.git", branch = "user-defined-html-elements" }
topo = { git = "https://github.com/simon-bourne/moxie.git", branch = "user-defined-html-elements" }
moxie = { git = "https://github.com/simon-bourne/moxie.git", branch = "user-defined-html-elements" }
moxie-dom = { git = "https://github.com/simon-bourne/moxie.git", branch = "user-defined-html-elements" }
augdom = { git = "https://github.com/simon-bourne/moxie.git", branch = "user-defined-html-elements" }
wasm-bindgen = "0.2.45"
